css fix for flickering

--- a/packages/core/src/styles/inner.scss
+++ b/packages/core/src/styles/inner.scss
@@ -7,6 +7,7 @@
  */
 
 .rpv-core__inner-pages {
+    overflow: auto;
     &--rtl {
         direction: rtl;
     }
